# SentryPeer

./: .clang-format  .dockerignore  .env  .gitignore  .gitleaksignore  .lgtm.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  COPYRIGHT  Dockerfile  Doxyfile  Makefile.am  README.md  SECURITY.md  bootstrap.sh  configure.ac  fly.toml  ghenry_at_sentrypeer_org_pgp_key.txt  index.md  run_cmake.sh  sentrypeer.1  sentrypeer_packaging_gpg_pub.txt  sonar-project.properties
.builds/: openbsd.yml
.github/: FUNDING.yml  ISSUE_TEMPLATE  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pull_request_template.md
.github/workflows/: cargo-audit.yml  cargo-clippy.yml  clang-analyzer.yml  cmake.yml  codeql-analysis.yml  coverity-scan.yml  cppcheck.yml  gitleaks.yml  main.yml  prototype.yml  sonarcloud-scan.yml
.zed/: tasks.json
cmake/: config.h.in  git_revision.cmake
debian/: changelog  control  copyright
debian/patches/: Remove-runpatch.patch
infrastructure/: .terraform.lock.hcl  README.md  docker_run.sh  install.sh  main.tf
packaging/: build_docker.sh  docker_debug.txt
packaging/alpine/: APKBUILD
packaging/brew/: sentrypeer.rb
packaging/debian/: building-via-gbp.txt  changelog  control  copyright  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  sentrypeer.default  sentrypeer.postinst  sentrypeer.postrm  sentrypeer.service  watch  watch.ex
packaging/debian/patches/: series
packaging/rpm/: README.md  sentrypeer.options  sentrypeer.service  sentrypeer.spec
prototype/: INSTALL.md  cpanfile  sentrypeer  sentrypeer.conf
sentrypeer_rust/: .env  Cargo.toml  build.rs  cbindgen.toml  rust-toolchain.toml  wrapper.h
sentrypeer_rust/.cargo/: config.toml
sentrypeer_rust/src/: cli.rs  config.rs  json_logger.rs  lib.rs  sentrypeer_c.rs  sentrypeer_conf.rs  sentrypeer_sip_daemon.rs  sip.rs  tcp.rs  tls.rs  udp.rs
sentrypeer_rust/src/sentrypeer_c/: config.rs  sip_daemon.rs  sip_message_event.rs
sentrypeer_rust/tests/: cli.rs  tls.rs
src/: bad_actor.c  bad_actor.h  conf.c  conf.h  database.c  database.h  http_api.c  http_api.h  http_called_number_route.c  http_called_numbers_route.c  http_common.c  http_common.h  http_daemon.c  http_daemon.h  http_health_check_route.c  http_ip_address_route.c  http_ip_addresses_route.c  http_route_regex_check.c  http_routes.c  http_routes.h  http_ui.c  http_ui.h  json_logger.c  json_logger.h  peer_to_peer_dht.c  peer_to_peer_dht.h  peer_to_peer_lan.c  peer_to_peer_lan.h  regex_match.c  regex_match.h  sentrypeer.c  sentrypeer.h  sentrypeer_rust.h  signal_handler.c  signal_handler.h  sip_daemon.c  sip_daemon.h  sip_message_event.c  sip_message_event.h  sip_parser.c  (+3 more)
src/compat/: mhd_compat.h
test/: Makefile
tests/: udp_client.c
tests/tools/: Makefile  pcre2demo.c  tcp_client.c  tcp_client.h  valgrind.sh
tests/tools/sipp/: sentrypeer.xml
tests/unit_tests/: 127.0.0.1-key.pem  127.0.0.1.pem  CMakeLists.txt  runner.c  test_bad_actor.c  test_bad_actor.h  test_conf.c  test_conf.h  test_database.c  test_database.h  test_http_api.c  test_http_api.h  test_http_api_version.c  test_http_api_version.h  test_http_route_check.c  test_http_route_check.h  test_ip_address_regex.c  test_ip_address_regex.h  test_json_logger.c  test_json_logger.h  test_peer_to_peer_dht.c  test_peer_to_peer_dht.h  test_peer_to_peer_lan.c  test_peer_to_peer_lan.h  test_sentrypeer_rust.c  test_sentrypeer_rust.h  test_sip_daemon.c  test_sip_daemon.h  test_sip_message.c  test_sip_message.h  test_sip_message_event.c  test_sip_message_event.h  test_utils.c  test_utils.h  test_web_api.c  test_web_api.h
web-gui/: .eslintrc.js  .gitignore  README.md  babel.config.js  jest.config.js  package-lock.json  package.json  vue.config.js
web-gui-theme/: package-lock.json  package.json
web-gui-theme/scripts/: sb-watch.js
web-gui-theme/src/pug/: index.pug
web-gui-theme/src/scss/: styles.scss
web-gui/public/: index.html
web-gui/src/: App.vue  main.js
web-gui/src/router/: index.js
web-gui/src/views/: CountryAnalysis.vue  NumberAnalysis.vue  SipMethods.vue  SourceIPs.vue  UserAgents.vue
web-gui/tests/e2e/: .eslintrc.js  globals.js
web-gui/tests/e2e/custom-assertions/: elementCount.js
web-gui/tests/e2e/custom-commands/: customExecute.js  openHomepage.js  openHomepageClass.js
web-gui/tests/e2e/page-objects/: homepage.js
web-gui/tests/e2e/specs/: test-with-pageobjects.js  test.js
web-gui/tests/unit/: example.spec.js
